fix: right panel attachments was missing padding

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -298,64 +298,7 @@
   }
 }
 
-// Module: Media Gallery
 
-.module-media-gallery {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
-  width: 100%;
-  overflow: hidden;
-}
-
-.module-media-gallery__tab-container {
-  display: flex;
-  flex-grow: 0;
-  flex-shrink: 0;
-  cursor: pointer;
-  width: 100%;
-}
-
-.module-media-gallery__tab {
-  width: 100%;
-  padding: 20px;
-  text-align: center;
-}
-
-.module-media-gallery__content {
-  display: flex;
-  flex-grow: 1;
-  overflow-y: auto;
-  overflow-x: hidden;
-  padding: 20px;
-}
-
-.module-media-gallery__sections {
-  display: flex;
-  flex-grow: 1;
-  flex-direction: column;
-  width: 100%;
-}
-
-// Module: Attachment Section
-
-.module-attachment-section {
-  width: 100%;
-}
-
-.module-attachment-section__header {
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 28px;
-}
-
-.module-attachment-section__items {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
 
 // Module: Document List Item
 
@@ -403,65 +346,6 @@
 .module-document-list-item__date {
   display: inline-block;
   flex-shrink: 0;
-}
-
-// Module: Media Grid Item
-
-.module-media-grid-item {
-  height: 94px;
-  width: 94px;
-  cursor: pointer;
-  background-color: var(--message-link-preview-background-color);
-  margin-inline-end: 4px;
-  margin-bottom: 4px;
-  position: relative;
-}
-
-.module-media-grid-item__image {
-  height: 94px;
-  width: 94px;
-  object-fit: cover;
-}
-
-.module-media-grid-item__icon {
-  position: absolute;
-  top: 15px;
-  bottom: 15px;
-  left: 15px;
-  right: 15px;
-}
-
-.module-media-grid-item__image-container {
-  object-fit: cover;
-  position: relative;
-}
-
-.module-media-grid-item__circle-overlay {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-
-  transform: translate(-50%, -50%);
-
-  width: 42px;
-  height: 42px;
-  background-color: var(--chat-buttons-background-color);
-  border-radius: 21px;
-
-  &:hover {
-    background-color: var(--chat-buttons-background-hover-color);
-  }
-}
-
-/* Module: Empty State*/
-
-.module-empty-state {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-  margin-top: var(--margins-sm);
-  font-size: 16px;
 }
 
 // Module: Conversation List Item
